--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -64,11 +64,11 @@ spec:
             - --cri
             - /run/containerd/containerd.sock
             {{- end }}
-            {{- if .Values.kubernetesSupport.enabled }} 
+            {{- if .Values.kubernetesSupport.enabled }}
             - -K
-            - {{ .Values.kubernetesSupport.apiAuth }} 
+            - {{ .Values.kubernetesSupport.apiAuth }}
             - -k
-            - {{ .Values.kubernetesSupport.apiUrl }} 
+            - {{ .Values.kubernetesSupport.apiUrl }}
             {{- end }}
             - -pk
         {{- if .Values.extraArgs }}
@@ -107,6 +107,9 @@ spec:
             httpGet:
               path: {{ .Values.falco.webserver.k8sHealthzEndpoint }}
               port: {{ .Values.falco.webserver.listenPort }}
+              {{- if .Values.falco.webserver.sslEnabled }}
+              scheme: HTTPS
+              {{- end }}
           readinessProbe:
             initialDelaySeconds: {{ .Values.falco.readinessProbe.initialDelaySeconds }}
             timeoutSeconds: {{ .Values.falco.readinessProbe.timeoutSeconds }}
@@ -114,6 +117,9 @@ spec:
             httpGet:
               path: {{ .Values.falco.webserver.k8sHealthzEndpoint }}
               port: {{ .Values.falco.webserver.listenPort }}
+              {{- if .Values.falco.webserver.sslEnabled }}
+              scheme: HTTPS
+              {{- end }}
           {{- end }}
           volumeMounts:
             {{- if .Values.docker.enabled }}
