--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -334,7 +334,9 @@ customRules:
 
 # certificates used by webserver and grpc server
 # paste certificate content or use helm with --set-file
+# or use existing secret containing key, crt, ca as well as pem bundle
 certs:
+  existingSecret: ""
   server:
     key: ""
     crt: ""
