--- a/.github/workflows/sync-from-upstream.yaml
+++ b/.github/workflows/sync-from-upstream.yaml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: '0 7 */7 * *' # At 07:00 on every 7th day-of-month
 
+  # Allows to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   sync-app-repository:
     runs-on: ubuntu-latest
