Use tagged version

--- a/.github/workflows/sync-from-upstream.yaml
+++ b/.github/workflows/sync-from-upstream.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Sync falco from upstream
-        uses: giantswarm/subtree-util@main
+        uses: giantswarm/subtree-util@v0.1.2
         with:
           target_github_token: ${{ secrets.ARCHITECT_BOT_GITHUB_REPO_SYNC_TOKEN }}
           target_repository: giantswarm/falco-app
@@ -20,7 +20,7 @@ jobs:
           source_path: falco
 
       - name: Sync falco-exporter from upstream
-        uses: giantswarm/subtree-util@main
+        uses: giantswarm/subtree-util@v0.1.2
         with:
           target_github_token: ${{ secrets.ARCHITECT_BOT_GITHUB_REPO_SYNC_TOKEN }}
           target_repository: giantswarm/falco-app
@@ -28,7 +28,7 @@ jobs:
           source_path: falco-exporter
 
       - name: Sync falcosidekick from upstream
-        uses: giantswarm/subtree-util@main
+        uses: giantswarm/subtree-util@v0.1.2
         with:
           target_github_token: ${{ secrets.ARCHITECT_BOT_GITHUB_REPO_SYNC_TOKEN }}
           target_repository: giantswarm/falco-app
