--- a/.github/workflows/sync-from-upstream.yaml
+++ b/.github/workflows/sync-from-upstream.yaml
@@ -24,6 +24,7 @@ jobs:
 
   sync-app-falco-exporter-repository:
     runs-on: ubuntu-latest
+    needs: sync-app-falco-repository
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -37,6 +38,7 @@ jobs:
 
   sync-app-falcosidekick-repository:
     runs-on: ubuntu-latest
+    needs: sync-app-falco-exporter-repository
     steps:
       - name: Checkout
         uses: actions/checkout@v2
