--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -5,6 +5,7 @@
 replicaCount: 2
 
 image:
+  registry: docker.io
   repository: falcosecurity/falcosidekick
   tag: 2.23.1
   pullPolicy: IfNotPresent
@@ -306,6 +307,7 @@ webui:
   darkmode: false
 
   image:
+    registry: docker.io
     repository: falcosecurity/falcosidekick-ui
     tag: "v1.1.0"
     pullPolicy: IfNotPresent
