--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -124,8 +124,7 @@ config:
     checkcert: true
 
   aws:
-    accountid: ""
-    iamrole: ""
+    rolearn: ""
     accesskeyid: ""
     secretaccesskey: ""
     region: ""
