add Service Account annotations
Signed-off-by: Cesar Okuti <cesar.okuti@gmail.com>

--- a/falco/templates/serviceaccount.yaml
+++ b/falco/templates/serviceaccount.yaml
@@ -9,4 +9,8 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+    {{- if .Values.serviceAccount.annotations }}
+  annotations:
+{{ toYaml .Values.serviceAccount.annotations | indent 4 }}
+    {{- end }}
 {{- end }}
