add grafana output
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -227,6 +227,16 @@ data:
   WAVEFRONT_METRICNAME: "{{ .Values.config.wavefront.metricname | b64enc}}"
   WAVEFRONT_MINIMUMPRIORITY: "{{ .Values.config.wavefront.minimumpriority | b64enc}}"
 
+  # Grafana Output
+  GRAFANA_HOSTPORT: "{{ .Values.config.grafana.hostport | b64enc}}"
+  GRAFANA_APIKEY: "{{ .Values.config.grafana.apikey | b64enc}}"
+  GRAFANA_DASHBOARDID: "{{ .Values.config.grafana.dashboardid | b64enc}}"
+  GRAFANA_PANELID: "{{ .Values.config.grafana.panelid | b64enc}}"
+  GRAFANA_ALLFIELDSASTAGS: "{{ .Values.config.grafana.panelid | printf "%t" | b64enc}}"
+  GRAFANA_MUTUALTLS: "{{ .Values.config.grafana.mutualtls | printf "%t" | b64enc}}"
+  GRAFANA_CHECKCERT: "{{ .Values.config.grafana.checkcert | printf "%t" | b64enc}}"
+  GRAFANA_MINIMUMPRIORITY: "{{ .Values.config.grafana.minimumpriority | b64enc}}"
+
   # WebUI Output
   {{- if .Values.webui.enabled -}}
   {{ $weburl := printf "http://%s-ui:2802" (include "falcosidekick.fullname" .) }}
