--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -267,6 +267,16 @@ config:
     flushintervalseconds: 1  # Time in seconds between flushing metrics to Wavefront. Defaults to 1s
     minimumpriority: "debug"  # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
 
+  grafana:
+    hostport: "" # http://{domain or ip}:{port}, if not empty, Grafana output is enabled
+    apikey: "" # API Key to authenticate to Grafana, if not empty, Grafana output is enabled
+    # dashboardid:  # annotations are scoped to a specific dashboard. Optionnal.
+    # panelid: "" # annotations are scoped to a specific panel. Optionnal.
+    # allfieldsastags: false # if true, all custom fields are added as tags (default: false)
+    # mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
+    # checkcert: true # check if ssl certificate of the output is valid (default: true)
+    # minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+
 service:
   type: ClusterIP
   port: 2801
