--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -270,12 +270,23 @@ config:
   grafana:
     hostport: "" # http://{domain or ip}:{port}, if not empty, Grafana output is enabled
     apikey: "" # API Key to authenticate to Grafana, if not empty, Grafana output is enabled
-    # dashboardid:  # annotations are scoped to a specific dashboard. Optionnal.
-    # panelid: "" # annotations are scoped to a specific panel. Optionnal.
-    # allfieldsastags: false # if true, all custom fields are added as tags (default: false)
-    # mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
-    # checkcert: true # check if ssl certificate of the output is valid (default: true)
-    # minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    dashboardid:  # annotations are scoped to a specific dashboard. Optionnal.
+    panelid: "" # annotations are scoped to a specific panel. Optionnal.
+    allfieldsastags: false # if true, all custom fields are added as tags (default: false)
+    mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
+    checkcert: true # check if ssl certificate of the output is valid (default: true)
+    minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    
+  fission:
+    function: "" # Name of Fission function, if not empty, Fission is enabled
+    routernamespace: "fission" # Namespace of Fission Router, "fission" (default)
+    routerservice: "router" # Service of Fission Router, "router" (default)
+    routerport: 80 # Port of service of Fission Router
+    minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    checkcert: true # check if ssl certificate of the output is valid (default: true)
+    mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
+
+
 
 service:
   type: ClusterIP
