add yandex output
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -246,6 +246,17 @@ data:
   FISSION_MUTUALTLS: "{{ .Values.config.fission.mutualtls | printf "%t" | b64enc}}"
   FISSION_CHECKCERT: "{{ .Values.config.fission.checkcert | printf "%t" | b64enc}}"
 
+  # Yandex Output
+  YANDEX_ACCESSKEYID:  "{{ .Values.config.yandex.accesskeyid | b64enc}}"
+  YANDEX_SECRETACCESSKEY: "{{ .Values.config.yandex.secretaccesskey | b64enc}}"
+  YANDEX_REGION: "{{ .Values.config.yandex.region | b64enc}}"
+  YANDEX_S3_ENDPOINT: "{{ .Values.config.yandex.s3.endpoint | b64enc}}"
+  YANDEX_S3_BUCKET: "{{ .Values.config.yandex.s3.bucket | b64enc}}"
+  YANDEX_S3_PREFIX: "{{ .Values.config.yandex.s3.prefix | b64enc}}"
+  YANDEX_S3_MINIMUMPRIORITY: "{{ .Values.config.yandex.s3.minimumpriority | b64enc}}"
+
+
+
   # WebUI Output
   {{- if .Values.webui.enabled -}}
   {{ $weburl := printf "http://%s-ui:2802" (include "falcosidekick.fullname" .) }}
