--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -286,7 +286,15 @@ config:
     checkcert: true # check if ssl certificate of the output is valid (default: true)
     mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
 
-
+  yandex:
+    accesskeyid: "" # yandex access key
+    secretaccesskey: "" # yandex secret access key
+    region: "" # yandex storage region (default: ru-central-1)
+  s3:
+    endpoint: "" # yandex storage endpoint (default: https://storage.yandexcloud.net) 
+    bucket: "falcosidekick" # Yandex storage, bucket name
+    prefix: "" # name of prefix, keys will have format: s3://<bucket>/<prefix>/YYYY-MM-DD/YYYY-MM-DDTHH:mm:ss.s+01:00.json
+    minimumpriority: "" # minimum priority of event for using this output, order is emergency|alert|critical|erro
 
 service:
   type: ClusterIP
