--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -275,14 +275,14 @@ config:
     allfieldsastags: false # if true, all custom fields are added as tags (default: false)
     mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
     checkcert: true # check if ssl certificate of the output is valid (default: true)
-    minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    minimumpriority: "" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
     
   fission:
     function: "" # Name of Fission function, if not empty, Fission is enabled
-    routernamespace: "fission" # Namespace of Fission Router, "fission" (default)
-    routerservice: "router" # Service of Fission Router, "router" (default)
+    routernamespace: "" # Namespace of Fission Router, "fission" (default)
+    routerservice: "" # Service of Fission Router, "router" (default)
     routerport: 80 # Port of service of Fission Router
-    minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    minimumpriority: "" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
     checkcert: true # check if ssl certificate of the output is valid (default: true)
     mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
 
