add kafkarest output
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -255,7 +255,12 @@ data:
   YANDEX_S3_PREFIX: "{{ .Values.config.yandex.s3.prefix | b64enc}}"
   YANDEX_S3_MINIMUMPRIORITY: "{{ .Values.config.yandex.s3.minimumpriority | b64enc}}"
 
-
+  # KafkaRest Output
+  KAFKAREST_ADDRESS: "{{ .Values.config.kafkarest.address | b64enc}}"
+  KAFKAREST_VERSION: "{{ .Values.config.kafkarest.version | toString | b64enc}}"
+  KAFKAREST_MINIMUMPRIORITY : "{{ .Values.config.kafkarest.minimumpriority | b64enc}}"
+  KAFKAREST_MUTUALTLS : "{{ .Values.config.kafkarest.mutualtls | printf "%t" | b64enc}}"
+  KAFKAREST_CHECKCERT : "{{ .Values.config.kafkarest.checkcert | printf "%t" | b64enc}}"
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
