--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -295,6 +295,13 @@ config:
     bucket: "falcosidekick" # Yandex storage, bucket name
     prefix: "" # name of prefix, keys will have format: s3://<bucket>/<prefix>/YYYY-MM-DD/YYYY-MM-DDTHH:mm:ss.s+01:00.json
     minimumpriority: "" # minimum priority of event for using this output, order is emergency|alert|critical|erro
+  
+  kafkarest:
+    address: "" # The full URL to the topic (example "http://kafkarest:8082/topics/test")
+    version: 2 # Kafka Rest Proxy API version 2|1 (default: 2)
+    minimumpriority: "" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
+    mutualtls: false # if true, checkcert flag will be ignored (server cert will always be checked)
+    checkcert: true # check if ssl certificate of the output is valid (default: true)
 
 service:
   type: ClusterIP
