--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -230,9 +230,9 @@ data:
   # Grafana Output
   GRAFANA_HOSTPORT: "{{ .Values.config.grafana.hostport | b64enc}}"
   GRAFANA_APIKEY: "{{ .Values.config.grafana.apikey | b64enc}}"
-  GRAFANA_DASHBOARDID: "{{ .Values.config.grafana.dashboardid | b64enc}}"
-  GRAFANA_PANELID: "{{ .Values.config.grafana.panelid | b64enc}}"
-  GRAFANA_ALLFIELDSASTAGS: "{{ .Values.config.grafana.panelid | printf "%t" | b64enc}}"
+  GRAFANA_DASHBOARDID: "{{ .Values.config.grafana.dashboardid | toString | b64enc}}"
+  GRAFANA_PANELID: "{{ .Values.config.grafana.panelid | toString | b64enc}}"
+  GRAFANA_ALLFIELDSASTAGS: "{{ .Values.config.grafana.allfieldsastags | printf "%t" | b64enc}}"
   GRAFANA_MUTUALTLS: "{{ .Values.config.grafana.mutualtls | printf "%t" | b64enc}}"
   GRAFANA_CHECKCERT: "{{ .Values.config.grafana.checkcert | printf "%t" | b64enc}}"
   GRAFANA_MINIMUMPRIORITY: "{{ .Values.config.grafana.minimumpriority | b64enc}}"
