--- a/falcosidekick/Chart.yaml
+++ b/falcosidekick/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: 2.24.0
-description: A simple daemon to help you with falco's outputs
+description: Connect Falco to your ecosystem
 icon: https://raw.githubusercontent.com/falcosecurity/falcosidekick/master/imgs/falcosidekick_color.png
 name: falcosidekick
 version: 0.3.14
