--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -262,6 +262,15 @@ data:
   KAFKAREST_MUTUALTLS : "{{ .Values.config.kafkarest.mutualtls | printf "%t" | b64enc}}"
   KAFKAREST_CHECKCERT : "{{ .Values.config.kafkarest.checkcert | printf "%t" | b64enc}}"
 
+  # Fission Output
+  FISSION_FUNCTION: "{{ .Values.config.fission.function | b64enc }}"
+  FISSION_ROUTERNAMESPACE: "{{ .Values.config.fission.routernamespace | b64enc }}"
+  FISSION_ROUTERSERVICE: "{{ .Values.config.fission.routerservice | toString | b64enc }}"
+  FISSION_ROUTERPORT: "{{ .Values.config.fission.routerport | toString | b64enc }}"
+  FISSION_MINIMUMPRIORITY: "{{ .Values.config.fission.minimumpriority | b64enc }}"
+  FISSION_MUTUALTLS: "{{ .Values.config.fission.mutualtls | printf "%t" | b64enc }}"
+  FISSION_CHECKCERT: "{{ .Values.config.fission.checkcert | printf "%t" | b64enc }}"
+
   # WebUI Output
   {{- if .Values.webui.enabled -}}
   {{ $weburl := printf "http://%s-ui:2802" (include "falcosidekick.fullname" .) }}
