--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -314,7 +314,10 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: falcosidekick.local
-      paths: []
+      paths:
+        - path: /
+          # -- pathType (e.g. ImplementationSpecific, Prefix, .. etc.)
+          # pathType: Prefix
 
   tls: []
   #  - secretName: chart-example-tls
@@ -394,7 +397,16 @@ webui:
       # kubernetes.io/tls-acme: "true"
     hosts:
       - host: falcosidekick-ui.local
-        paths: ["/ui", "/events", "/healthz", "/ws"]
+        paths:
+        - path: /ui
+          # -- pathType (e.g. ImplementationSpecific, Prefix, .. etc.)
+          # pathType: Prefix
+        - path: /events
+          # pathType: Prefix
+        - path: /healthz
+          # pathType: Prefix
+        - path: /ws
+          # pathType: Prefix
 
     tls: []
     #  - secretName: chart-example-tls
