--- a/falcosidekick/templates/ingress.yaml
+++ b/falcosidekick/templates/ingress.yaml
@@ -1,7 +1,9 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "falcosidekick.fullname" . -}}
+{{- $ingressApiIsStable := eq (include "falcosidekick.ingress.isStable" .) "true" -}}
+{{- $ingressSupportsPathType := eq (include "falcosidekick.ingress.supportsPathType" .) "true" -}}
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: {{ include "falcosidekick.ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -32,10 +34,20 @@ spec:
       http:
         paths:
         {{- range .paths }}
-          - path: {{ . }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: http
+        - path: {{ .path }}
+          {{- if $ingressSupportsPathType }}
+          pathType: {{ default "ImplementationSpecific" .pathType }}
+          {{- end }}
+          backend:
+            {{- if $ingressApiIsStable }}
+            service:
+              name: {{ $fullName }}
+              port:
+                name: http
+            {{- else }}
+            serviceName: {{ $fullName }}
+            servicePort: http
+            {{- end }}
         {{- end }}
   {{- end }}
 {{- end }}
