--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -22,7 +22,7 @@ probesPort: 19376
 image:
   registry: docker.io
   repository: falcosecurity/falco-exporter
-  tag: 0.5.0
+  tag: 0.6.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -54,10 +54,12 @@ podSecurityPolicy:
   # If not set and create is true, a name is generated using the fullname template
   name:
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -65,7 +67,8 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
