Support annotation block for kind Service
Signed-off-by: Denis <arslanbekov@gmail.com>

Update CHANGELOG

Signed-off-by: Denis <arslanbekov@gmail.com>

Bump dependencies falcosidekick in falco chart

Signed-off-by: Denis <arslanbekov@gmail.com>

Update CHANGELOG

Signed-off-by: Denis <arslanbekov@gmail.com>

Update CHANGELOG

Signed-off-by: Denis <arslanbekov@gmail.com>

Bump dependencies falcosidekick in falco chart

Signed-off-by: Denis <arslanbekov@gmail.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -306,6 +306,8 @@ config:
 service:
   type: ClusterIP
   port: 2801
+  annotations: {}
+    # networking.gke.io/load-balancer-type: Internal
 
 ingress:
   enabled: false
