added serviceAccountName to deployment-ui and rule to use the psp
Signed-off-by: Wulf Thimm <wulf@gitpod.io>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -28,6 +28,7 @@ spec:
         - name: {{ . }}
       {{- end }}
       {{- end }}
+      serviceAccountName: {{ include "falcosidekick.fullname" . }}
       {{- if .Values.webui.priorityClassName }}
       priorityClassName: "{{ .Values.webui.priorityClassName }}"
       {{- end }}
