--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -70,7 +70,7 @@ spec:
             - -k
             - {{ .Values.kubernetesSupport.apiUrl }}
             {{- if .Values.kubernetesSupport.enableNodeFilter }}
-            - --k8s-node="${FALCO_K8S_NODE_NAME}"
+            - --k8s-node="$(FALCO_K8S_NODE_NAME)"
             {{- end }}
             {{- end }}
             - -pk
