add podLabels to support customizing pod labels
Signed-off-by: Kaizhe Huang <khuang@aurora.tech>

--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -19,6 +19,9 @@ spec:
       labels:
         app: {{ template "falco.fullname" .}}
         role: security
+{{- with .Values.podLabels }}
+{{ toYaml . | indent 8 }}
+{{- end }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
         checksum/rules: {{ include (print $.Template.BasePath "/configmap-rules.yaml") . | sha256sum }}
