Add option to add labels to the Daemonset pods
Signed-off-by: Chelo Montilla <chelo.montilla@lansweeper.com>

--- a/falco-exporter/templates/daemonset.yaml
+++ b/falco-exporter/templates/daemonset.yaml
@@ -13,6 +13,9 @@ spec:
     metadata:
       labels:
         {{- include "falco-exporter.selectorLabels" . | nindent 8 }}
+        {{- if .Values.daemonset.podLabels }}
+        {{ toYaml .Values.daemonset.podLabels | nindent 8 }}
+        {{- end }}
       {{- if .Values.daemonset.annotations }}
       annotations:
       {{ toYaml .Values.daemonset.annotations | nindent 8 }}
