add additional pod labels to falco sidekick chart
Signed-off-by: Chelo Montilla <chelo.montilla@lansweeper.com>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -21,6 +21,9 @@ spec:
       labels:
         app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui
         app.kubernetes.io/instance: {{ .Release.Name }}-ui
+        {{- if .Values.webui.podLabels }}
+        {{ toYaml .Values.webui.podLabels | nindent 8 }}
+        {{- end }}
     spec:
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
