--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -169,7 +169,7 @@ falco:
   # Minimum rule priority level to load and run. All rules having a
   # priority more severe than this level will be loaded/run.  Can be one
   # of "emergency", "alert", "critical", "error", "warning", "notice",
-  # "info", "debug".
+  # "informational", "debug".
   priority: debug
 
   # Whether or not output to any of the output channels below is
