--- a/falco/templates/configmap.yaml
+++ b/falco/templates/configmap.yaml
@@ -27,6 +27,17 @@ data:
       - {{ . }}
       {{- end }}
 
+    plugins:
+{{ toYaml .Values.falco.plugins | indent 8 }}
+
+    # Setting this list to empty ensures that the above plugins are *not*
+    # loaded and enabled by default. If you want to use the above plugins,
+    # set a meaningful init_config/open_params for the cloudtrail plugin
+    # and then change this to:
+    # load_plugins: [cloudtrail, json]
+    load_plugins:
+{{ toYaml .Values.falco.loadPlugins | indent 8 }}
+
     # If true, the times displayed in log messages and output messages
     # will be in ISO 8601. By default, times are displayed in the local
     # time zone, as governed by /etc/localtime.
@@ -77,24 +88,51 @@ data:
     buffered_outputs: {{ .Values.falco.bufferedOutputs }}
 
     # Falco uses a shared buffer between the kernel and userspace to pass
-    # system call information. When falco detects that this buffer is
+    # system call information. When Falco detects that this buffer is
     # full and system calls have been dropped, it can take one or more of
     # the following actions:
-    #   - "ignore": do nothing. If an empty list is provided, ignore is assumed.
-    #   - "log": log a CRITICAL message noting that the buffer was full.
-    #   - "alert": emit a falco alert noting that the buffer was full.
-    #   - "exit": exit falco with a non-zero rc.
+    #   - ignore: do nothing (default when list of actions is empty)
+    #   - log: log a DEBUG message noting that the buffer was full
+    #   - alert: emit a Falco alert noting that the buffer was full
+    #   - exit: exit Falco with a non-zero rc
+    #
+    # Notice it is not possible to ignore and log/alert messages at the same time.
     #
     # The rate at which log/alert messages are emitted is governed by a
     # token bucket. The rate corresponds to one message every 30 seconds
-    # with a burst of 10 messages.
+    # with a burst of one message (by default).
+    #
+    # The messages are emitted when the percentage of dropped system calls
+    # with respect the number of events in the last second
+    # is greater than the given threshold (a double in the range [0, 1]).
+    #
+    # For debugging/testing it is possible to simulate the drops using
+    # the `simulate_drops: true`. In this case the threshold does not apply.
     syscall_event_drops:
+      threshold: {{ .Values.falco.syscallEventDrops.threshold }}
       actions:
         {{- range .Values.falco.syscallEventDrops.actions }}
         - {{ . }}
         {{- end }}
       rate: {{ .Values.falco.syscallEventDrops.rate  }}
       max_burst: {{ .Values.falco.syscallEventDrops.maxBurst }}
+
+    # Falco uses a shared buffer between the kernel and userspace to receive
+    # the events (eg., system call information) in userspace.
+    #
+    # Anyways, the underlying libraries can also timeout for various reasons.
+    # For example, there could have been issues while reading an event.
+    # Or the particular event needs to be skipped.
+    # Normally, it's very unlikely that Falco does not receive events consecutively.
+    #
+    # Falco is able to detect such uncommon situation.
+    #
+    # Here you can configure the maximum number of consecutive timeouts without an event
+    # after which you want Falco to alert.
+    # By default this value is set to 1000 consecutive timeouts without an event at all.
+    # How this value maps to a time interval depends on the CPU frequency.
+    syscall_event_timeouts:
+      max_consecutives: {{ .Values.falco.syscallEventTimeouts.maxConsecutives }}
 
     # Falco continuously monitors outputs performance. When an output channel does not allow
     # to deliver an alert within a given deadline, an error is reported indicating
@@ -110,7 +148,6 @@ data:
     #
     # With a 2000ms default, the notification consumer can block the Falco output
     # for up to 2 seconds without reaching the timeout.
-
     output_timeout: {{ .Values.falco.output_timeout }}
 
     # A throttling mechanism implemented as a token bucket limits the
@@ -130,7 +167,6 @@ data:
 
     # Where security notifications should go.
     # Multiple outputs can be enabled.
-
     syslog_output:
       enabled: {{ .Values.falco.syslogOutput.enabled }}
 
@@ -141,7 +177,6 @@ data:
     #
     # Also, the file will be closed and reopened if falco is signaled with
     # SIGUSR1.
-
     file_output:
       enabled: {{ .Values.falco.fileOutput.enabled }}
       keep_alive: {{ .Values.falco.fileOutput.keepAlive }}
@@ -160,7 +195,6 @@ data:
     # $ openssl req -newkey rsa:2048 -nodes -keyout key.pem -x509 -days 365 -out certificate.pem
     # $ cat certificate.pem key.pem > falco.pem
     # $ sudo cp falco.pem /etc/falco/falco.pem
-
     webserver:
       enabled: {{ .Values.falco.webserver.enabled }}
       listen_port: {{ .Values.falco.webserver.listenPort }}
@@ -168,14 +202,6 @@ data:
       k8s_healthz_endpoint: {{ .Values.falco.webserver.k8sHealthzEndpoint }}
       ssl_enabled: {{ .Values.falco.webserver.sslEnabled }}
       ssl_certificate: {{ .Values.falco.webserver.sslCertificate }}
-
-    # Possible additional things you might want to do with program output:
-    #   - send to a slack webhook:
-    #         program: "\"jq '{text: .output}' | curl -d @- -X POST https://hooks.slack.com/services/XXX\""
-    #   - logging (alternate method than syslog):
-    #         program: logger -t falco-test
-    #   - send over a network connection:
-    #         program: nc host.example.com 80
 
     # If keep_alive is set to true, the program will be started once and
     # continuously written to, with each output message on its own
@@ -193,7 +219,29 @@ data:
     http_output:
       enabled: {{ if .Values.falcosidekick.enabled }}true{{ else }}{{ .Values.falco.httpOutput.enabled }}{{ end }}
       url: {{ if .Values.falcosidekick.enabled }}http://{{ template "falco.fullname" . }}-falcosidekick{{ if .Values.falcosidekick.fullfqdn }}.{{ .Release.Namespace }}.svc.cluster.local{{ end }}:{{ .Values.falcosidekick.listenport | default "2801" }}{{ else }}{{ .Values.falco.httpOutput.url }}{{ end }}
+      user_agent: {{ .Values.falco.httpOutput.userAgent }}
 
+
+    # Falco supports running a gRPC server with two main binding types
+    # 1. Over the network with mandatory mutual TLS authentication (mTLS)
+    # 2. Over a local unix socket with no authentication
+    # By default, the gRPC server is disabled, with no enabled services (see grpc_output)
+    # please comment/uncomment and change accordingly the options below to configure it.
+    # Important note: if Falco has any troubles creating the gRPC server
+    # this information will be logged, however the main Falco daemon will not be stopped.
+    # gRPC server over network with (mandatory) mutual TLS configuration.
+    # This gRPC server is secure by default so you need to generate certificates and update their paths here.
+    # By default the gRPC server is off.
+    # You can configure the address to bind and expose it.
+    # By modifying the threadiness configuration you can fine-tune the number of threads (and context) it will use.
+    # grpc:
+    #   enabled: true
+    #   bind_address: "0.0.0.0:5060"
+    #   # when threadiness is 0, Falco sets it by automatically figuring out the number of online cores
+    #   threadiness: 0
+    #   private_key: "/etc/falco/certs/server.key"
+    #   cert_chain: "/etc/falco/certs/server.crt"
+    #   root_certs: "/etc/falco/certs/ca.crt"
     grpc:
       enabled: {{ .Values.falco.grpc.enabled }}
       threadiness: {{ .Values.falco.grpc.threadiness }}
@@ -206,6 +254,10 @@ data:
       root_certs: {{ .Values.falco.grpc.rootCerts }}
       {{- end }}
 
+    # gRPC output service.
+    # By default it is off.
+    # By enabling this all the output events will be kept in memory until you read them with a gRPC client.
+    # Make sure to have a consumer for them or leave this disabled.
     grpc_output:
       enabled: {{ .Values.falco.grpcOutput.enabled }}
     
