--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -133,8 +133,25 @@ falco:
     - /etc/falco/falco_rules.yaml
     - /etc/falco/falco_rules.local.yaml
     - /etc/falco/k8s_audit_rules.yaml
+    # - /etc/falco/aws_cloudtrail_rules.yaml
     - /etc/falco/rules.d
   # - /etc/falco/rules.optional.d
+
+  plugins:
+    - name: cloudtrail
+      library_path: libcloudtrail.so
+      init_config: ""
+      open_params: ""
+    - name: json
+      library_path: libjson.so
+      init_config: ""
+
+  # Setting this list to empty ensures that the above plugins are *not*
+  # loaded and enabled by default. If you want to use the above plugins,
+  # set a meaningful init_config/open_params for the cloudtrail plugin
+  # and then change this to:
+  # load_plugins: [cloudtrail, json]
+  loadPlugins: []
 
   # If true, the times displayed in log messages and output messages
   # will be in ISO 8601. By default, times are displayed in the local
@@ -180,20 +197,47 @@ falco:
   # system call information. When Falco detects that this buffer is
   # full and system calls have been dropped, it can take one or more of
   # the following actions:
-  #   - "ignore": do nothing. If an empty list is provided, ignore is assumed.
-  #   - "log": log a CRITICAL message noting that the buffer was full.
-  #   - "alert": emit a Falco alert noting that the buffer was full.
-  #   - "exit": exit Falco with a non-zero rc.
+  #   - ignore: do nothing (default when list of actions is empty)
+  #   - log: log a DEBUG message noting that the buffer was full
+  #   - alert: emit a Falco alert noting that the buffer was full
+  #   - exit: exit Falco with a non-zero rc
+  #
+  # Notice it is not possible to ignore and log/alert messages at the same time.
   #
   # The rate at which log/alert messages are emitted is governed by a
   # token bucket. The rate corresponds to one message every 30 seconds
-  # with a burst of 10 messages.
+  # with a burst of one message (by default).
+  #
+  # The messages are emitted when the percentage of dropped system calls
+  # with respect the number of events in the last second
+  # is greater than the given threshold (a double in the range [0, 1]).
+  #
+  # For debugging/testing it is possible to simulate the drops using
+  # the `simulate_drops: true`. In this case the threshold does not apply.
   syscallEventDrops:
+    threshold: .1
     actions:
       - log
       - alert
     rate: .03333
-    maxBurst: 10
+    maxBurst: 1
+
+  # Falco uses a shared buffer between the kernel and userspace to receive
+  # the events (eg., system call information) in userspace.
+  #
+  # Anyways, the underlying libraries can also timeout for various reasons.
+  # For example, there could have been issues while reading an event.
+  # Or the particular event needs to be skipped.
+  # Normally, it's very unlikely that Falco does not receive events consecutively.
+  #
+  # Falco is able to detect such uncommon situation.
+  #
+  # Here you can configure the maximum number of consecutive timeouts without an event
+  # after which you want Falco to alert.
+  # By default this value is set to 1000 consecutive timeouts without an event at all.
+  # How this value maps to a time interval depends on the CPU frequency.
+  syscallEventTimeouts:
+    maxConsecutives: 1000
 
   # Falco continuously monitors outputs performance. When an output channel does not allow
   # to deliver an alert within a given deadline, an error is reported indicating
@@ -302,6 +346,7 @@ falco:
   httpOutput:
     enabled: false
     url: http://some.url
+    userAgent: "falcosecurity/falco"
 
   # Falco supports running a gRPC server with two main binding types
   # 1. Over the network with mandatory mutual TLS authentication (mTLS)
